# django-rest-domashka

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docs.py  env_example  nginx.conf  pyproject.toml  signals.py  utils.py
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2484c951eaf88dd9_0001_initial_py.html  z_2484c951eaf88dd9_0002_course_owner_lesson_owner_py.html  z_2484c951eaf88dd9_0003_lesson_video_url_subscription_py.html  z_2484c951eaf88dd9___init___py.html  z_f978324627c06562___init___py.html  z_f978324627c06562_admin_py.html  z_f978324627c06562_apps_py.html  z_f978324627c06562_models_py.html  z_f978324627c06562_paginators_py.html  z_f978324627c06562_permissions_py.html  z_f978324627c06562_serializers_py.html  z_f978324627c06562_tests_py.html  z_f978324627c06562_urls_py.html  z_f978324627c06562_validators_py.html  z_f978324627c06562_views_py.html
materials/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_lesson_video_url_subscription.py  0004_alter_course_options_alter_lesson_options_and_more.py  0005_course_updated_at.py
materials/services/: stripe_service.py
src/: materials_urls.py  materials_views.py
test_data/: check_data_simple.py  create_subscriptions.py  test_celery_simple.py  test_email_task.py  test_task.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: create_group.py  create_test_materials.py  create_test_users.py  fill_payment.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py
