[project]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = [
    {name = "Max",email = "z.max83@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-phonenumber-field (>=8.1.0,<9.0.0)",
    "phonenumbers (>=9.0.13,<10.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "coreapi (>=2.3.3,<3.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "stripe (>=12.5.1,<13.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.18.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.black]
line-length = 119
exclude = '.git'

[tool.mypy]
line-length = 119
disallow_untyped_defs = true
warn_return_any = true
exclude = ['venv', 'tests']

[tool.isort]
line_length = 119
